[package]
name = "advent_of_code_2020"
version = "0.1.0"
authors = ["Kai Roßwag<kairosswag@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
itertools = "0.9.0"
lazy_static = "1.4.0"
parse-display = "0.4.0"
pest = "2.1.3"
pest_derive = "2.1.0"
regex = "1.4.2"
